# nodestream-public-transport-demo

./: README.md  nodestream.yaml  pyproject.toml
data/: stations.csv
data/routes/: README.md  route_buses.csv  route_train_aberdeen_dundee.csv  route_train_aberdeen_inverness.csv  route_train_inverness_kyle_of_lochalsh.csv
pipelines/: README.md  scotland_chart.yaml  train_lines.yaml
routes/: README.md  route_ferries.csv  route_train_dundee_inverness.csv  route_train_inverness_thurso_wick.csv
