[tool.poetry]
name = "nodestream_project"
version = "0.1.0"
description = "A new ingestion project using nodestream"
readme = "README.md"
authors = ["Your Name <your_name@your_domain.com>"] 

[tool.poetry.dependencies]
python = "^3.10"
nodestream = "^0.14.14"


nodestream-plugin-neptune = "^0.14"


[tool.poetry.plugins."nodestream.plugins"]
"argument_resolvers" = "nodestream_project.argument_resolvers"
"interpretations" = "nodestream_project.interpretations"
"normalizers" = "nodestream_project.normalizers"
"value_providers" = "nodestream_project.value_providers"
